# libdata-public

./: .envrc  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  shell.nix  src.nix  twiggy.nix  wasm-bindgen-cli.nix
.github/workflows/: rust.yml
datacore/: Cargo.toml
datacore/benches/: io.rs
datacore/src/: block.rs  core.rs  hash.rs  keys.rs  lib.rs  merkle.rs  store_blocks.rs  store_data.rs  store_state.rs
datacore/src/merkle_tree_stream/: flat_tree.rs  mod.rs  tests.rs
datacore/tests/: core.rs  model.rs  replicate.rs  snapshots.rs
datacore/tests/common/: mod.rs
datacore/tests/snapshots/: snapshots__snapshots_append-2.snap  snapshots__snapshots_append.snap
libdata/: Cargo.toml
libdata-wasm/: Cargo.toml  Makefile  default.nix
libdata-wasm/src/: core.rs  keys.rs  lib.rs  multicore.rs  storage.rs  websocket.rs
libdata-wasm/tests/: replicate.rs
libdata/src/: cores.rs  iter.rs  key.rs  lib.rs
libdata/src/replication/: core_replica.rs  handle.rs  mod.rs  replica_trait.rs  replication.rs
libdata/tests/: cores.rs  iter.rs  key.rs  replication.rs
libdata/tests/snapshots/: key__key_secret_key_bytes_have_not_changed.snap  key__key_snapshot_1.snap  key__key_snapshot_2.snap  key__key_snapshot_3.snap
protocol/: Cargo.toml  build.rs
protocol/src/: channels.rs  lib.rs  message.rs  options.rs  schema.proto  util.rs
protocol/src/io/: mod.rs  reader.rs  writer.rs
protocol/src/noise/: cipher.rs  handshake.rs  mod.rs
protocol/src/protocol/: handshake.rs  main.rs  mod.rs
protocol/tests/: basic.rs  common.rs  handshake.rs  timeout.rs
random-access-disk/: Cargo.toml  README.md
random-access-disk/fuzz/: Cargo.toml
random-access-disk/src/: lib.rs
random-access-disk/tests/: regression.rs  test.rs
random-access-memory/: Cargo.toml
random-access-memory/fuzz/: Cargo.toml
random-access-memory/src/: lib.rs
random-access-memory/tests/: regression.rs  test.rs
random-access-storage/: Cargo.toml  README.md
random-access-storage/src/: lib.rs
