[package]
name = "datacore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random-access-storage = { path = "../random-access-storage" }
anyhow = "1.0.26"
futures-lite = "1.12.0"
byteorder = "1.3.4"
ed25519-dalek = "1.0.1"
blake3 = "1.3.1"
hex = "0.4"
rand = { version = "0.7.3", features = [ "std", "wasm-bindgen" ] }

[dev-dependencies]
random-access-memory = { path = "../random-access-memory" }
random-access-disk = { path = "../random-access-disk" }
quickcheck = "0.9.2"
insta = "1.8.0"
async-std = { version = "1.10.0", features = ["attributes"] }
crypto-hash = "0.3.4"
tempfile = "3.1.0"
criterion = { version = "0.3.4", features = [ "async_std" ] }

[[bench]]
name = "io"
harness = false
