[package]
name = "libdata-wasm"
version = "0.1.0"
authors = ["Martin Toman <toman.martin@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libdata = { path = "../libdata" }
random-access-storage = { path = "../random-access-storage" }
random-access-memory = { path = "../random-access-memory" }
getrandom = { version = "0.2.3", features = ["js"] }
wasm-bindgen = { version = "=0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
anyhow = "1.0.44"
hex = "0.4"
futures-lite = "1.12.0"
async-std = "1.10.0"
async-trait = "0.1.24"
async-channel = "1.6.1"
console_error_panic_hook = "0.1.7"
serde_json = "1.0"
ws_stream_wasm = "0.7.3"
async_io_stream = "0.3.3"
fluvio-wasm-timer = "0.2.5"
pharos = "0.5.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
sluice = "0.5.5"
