[package]
name = "libdata"
version = "0.1.0"
authors = ["Martin Toman <toman.martin@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datacore = { path = "../datacore" }
protocol = { path = "../protocol" }
random-access-storage = { path = "../random-access-storage" }
anyhow = "1.0.44"
rand = { version = "0.7.3", features = [ "std", "wasm-bindgen" ] }
rand_chacha = "0.3.1"
blake3 = "1.3.1"
futures-lite = "1.12.0"
async-std = "1.10.0"
async-trait = "0.1.24"
async-channel = "1.6.1"
hex = "0.4"

[dev-dependencies]
random-access-memory = { path = "../random-access-memory" }
quickcheck = "0.9.2"
insta = "1.8.0"
async-std = { version = "1.10.0", features = ["attributes"] }
sluice = "0.5.5"
