[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
futures-lite = "1.12.0"
blake3 = "1.3.1"
blake2-rfc = "0.2.18"
byteorder = "1.3.4"
rand = "0.7.3"
snow = { version = "0.8.0", features = ["risky-raw-split"] }
prost = "0.7"
varinteger = "1.0"
async-channel = "1.6.1"
hex = "0.4"
salsa20 = "0.6"
futures-timer = "3.0.2"

[build-dependencies]
prost-build = "0.6.1"

[dev-dependencies]
quickcheck = "0.9.2"
data-encoding = "2.2.0"
remove_dir_all = "0.7.0"
tempfile = "3.1.0"
async-std = { version = "1.5.0", features = ["attributes"] }
sluice = "0.5.5"
futures-test = "0.3.17"
