[package]
name = "random-access-disk"
version = "2.0.0"
description = "Random read/write disk."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
random-access-storage = { path = "../random-access-storage" }
anyhow = "1.0.26"
mkdirp = "1.0.0"
async-std = "1.5.0"
async-trait = "0.1.24"

[dev-dependencies]
quickcheck = "0.9.2"
rand = "0.7.3"
tempfile = "3.1.0"
async-std = { version = "1.5.0", features = ["attributes"] }
